change userId processing and other improovments